fix: 리포지토리 조회 방식 페이징 고려하여 전부 받아와, type이 user인 것에 대해서만 조회하도록 수정